| Summary: | ASTERISK-26341: ARI: Stopping a media playlist only stops the current media URI being played back, and not the whole list | ||
| Reporter: | Matt Jordan (mjordan) | Labels: | |
| Date Opened: | 2016-09-06 15:24:53 | Date Closed: | 2016-09-07 17:53:50 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_ari_playbacks |
| Versions: | 14.0.0-beta2 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | When issuing a {{stop}} to a media playlist, the expected behavior is that the entire playlist (which is represented by a single {{Playback}} object) is stopped and deleted.
What actually happens is that the current media URI is "stopped", but subsequent media URIs play on. That results in a slightly weird situation: # We no longer have a {{Playback}} object, because we just deleted it # We just told something that has a single handle to be stopped, but instead it keeps on going (although it did stop *one* of its media URIs, I guess) I blame the developer who wrote this code. Who allows [~mjordan] to write stuff any more, anyway? | ||
| Comments: | |||