res/res_stasis_playback.c
@@ -370,6 +370,9 @@ static void play_on_channel(struct stasis_app_playback *playback,
 
 		playback_final_update(playback, offsetms, res,
 			ast_channel_uniqueid(chan));
+		if (res == AST_CONTROL_STREAM_STOP) {
+			break;
+		}
 
 		/* Reset offset for any subsequent media */
 		offsetms = 0;
